--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
     <h1>Hello</h1>
     <h1>Soft-en</h1>
-    <img src = 'img/Python-logo.png'>
+    <img src = 'img\Python-logo.png'>
 </body>
 </html>
