--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>Panuwichh</title>
 <body>
     <h1>Hello</h1>
-    <h1>Soft-en</h1>
+    <h1 style="font-size: 60px;">Soft-en</h1>
     <img src = 'img\Python-logo.png' width="20%" height="20%">
 </body>
 </html>
