--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-<html>
-    <title>Panuwichh</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
+    <title>Panuwich</title>
+    <style>
+        html{
+            font-family: 'Tilt Neon', sans-serif;
+        }
+    </style>
+    </head>
 <body>
-    <h1>Hello</h1>
-    <h1 style="font-size: 60px;">Soft-en</h1>
-    <img src = 'img\Python-logo.png' width="20%" height="20%">
+    <h3 style="font-size: 60px;">Welcome to Web</h3>
+    <a href="https://www.instagram.com/ppanuu._/">IG</a>
+    <a href="https://github.com/Panuwichhh"><strong style="font-size: 30px;">github</strong></a>
 </body>
 </html>
