--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </head>
 <body>
     <h3 style="font-size: 60px;">Welcome to Web</h3>
-    <a href="https://www.instagram.com/ppanuu._/">IG</a>
+    <a href="https://www.instagram.com/ppanuu._/"><strong style="font-size: 30px;">IG</strong></a>
     <a href="https://github.com/Panuwichhh"><strong style="font-size: 30px;">github</strong></a>
-    <a href="page1.html" target="_blank" rel="page1"></a>
+    <p><a href="page1.html" target="_blank" rel="page1">1</a></p>
 </body>
 </html>
