--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Panuwich</title>
-    <style>
-        html{
-            font-family: 'Tilt Neon', sans-serif;
-        }
-    </style>
-    </head>
+</head>
 <body>
     <h3 style="font-size: 60px;">Welcome to Web</h3>
-    <a href="https://www.instagram.com/ppanuu._/"><strong style="font-size: 30px;">IG</strong></a>
-    <a href="https://github.com/Panuwichhh"><strong style="font-size: 30px;">github</strong></a>
+    <hr>
+    <a href="https://www.instagram.com/ppanuu._/" target="_blank"><strong style="font-size: 30px;">IG</strong></a>
+    <a href="https://github.com/Panuwichhh" target="_blank"><strong style="font-size: 30px;">github</strong></a>
     <p><a href="page1.html" target="_blank" rel="page1">1</a></p>
 </body>
 </html>
