--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Panuwich</title>
 </head>
 <body>
-    <h3 style="font-size: 60px;">Welcome to Web</h3>
+    <h3 style="font-size: 60px;">Welcome</h3>
     <hr>
+    <p><h1><strong>Panuwich Saithong</strong></h1></p>
+    <p><h1><strong>I'm student of TSE (Thammasat School of Engineering)</strong></h1></p>
+    <p><h1><strong>Major softwere Engineering</strong></h1></p> 
     <a href="https://www.instagram.com/ppanuu._/" target="_blank"><strong style="font-size: 30px;">IG</strong></a>
     <a href="https://github.com/Panuwichhh" target="_blank"><strong style="font-size: 30px;">github</strong></a>
     <p><a href="page1.html" target="_blank" rel="page1">1</a></p>
