--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Panuwich</title>
+    
 </head>
 <body>
-    <h3 style="font-size: 60px;">Welcome</h3>
-    <hr>
-    <p><h1><strong>Panuwich Saithong</strong></h1></p>
-    <p><h1><strong>I'm student of TSE (Thammasat School of Engineering)</strong></h1></p>
-    <p><h1><strong>Major softwere Engineering</strong></h1></p> 
-    <a href="https://www.instagram.com/ppanuu._/" target="_blank"><strong style="font-size: 30px;">IG</strong></a>
-    <a href="https://github.com/Panuwichhh" target="_blank"><strong style="font-size: 30px;">github</strong></a>
-    <p><a href="page1.html" target="_blank" rel="page1">1</a></p>
+    <nav class="navbar">
+        <ul>
+            <lu><a href="https://github.com/Panuwichhh"><i class="fa-brands fa-github imgicon"></i></a></lu>
+            <lu><a href="https://www.instagram.com/ppanuu._/"><i class="fa-brands fa-instagram imgicon"></i></a></lu>
+            <lu><a href="https://www.facebook.com/tae.panuwich.5?locale=th_TH"><i class="fa-brands fa-facebook imgicon"></i></a></lu>
+            <la><ba><i class="fa-solid fa-cloud imgicon"></i></ba></i></la>
+        </ul>
+    </nav>
+    <main>
+        <img style="display: block; margin-left: auto; margin-right: auto; width: 600px;"  src="img/cat.png" alt="cathuh">
+        <p style="text-align: center; font-size: 60px;" >Panuwich Saithong</p>
+        <p style="text-align: center; font-size: 50px;" >TSE (Thammasat School of Engineering)</p>
+        <p style="text-align: center; font-size: 40px; " >>Softwere Engineering</p> <hr>
+        <p><a href="page1.html" target="_blank" rel="page1">1</a></p>
+
+    </main>
 </body>
 </html>
