--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img style="display: block; margin-left: auto; margin-right: auto; width: 600px;"  src="img/cat.png" alt="cathuh">
         <p style="text-align: center; font-size: 60px;" >Panuwich Saithong</p>
         <p style="text-align: center; font-size: 50px;" >TSE (Thammasat School of Engineering)</p>
-        <p style="text-align: center; font-size: 40px; " >>Softwere Engineering</p> <hr>
+        <p style="text-align: center; font-size: 40px; " >Softwere Engineering</p> <hr>
         <p><a href="page1.html" target="_blank" rel="page1">1</a></p>
  
     </main>
